# Kolab

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  lint.ps1  run-clang-format.py
.github/workflows/: Build-Checks.yml  Style-Checks.yml  ci.yml
Client/: CMakeLists.txt  Client.cpp
Client/Renderer/: Window.h
Common/: CMakeLists.txt  String.h  Types.h
Common/DataStructures/: ArrayView.h  String.cpp  String.h  StringView.h
Common/LanguageOverrides/: InitializerList.h
scripts/: build.ps1  build.sh  install_dependencies.ps1  install_dependencies.sh  lint.ps1  lint.sh  static-analysis.ps1  static-analysis.sh
test/: CMakeLists.txt  placeholder.cpp
